apps/registry/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
  namespace: registry
  labels:
    app: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
        - env:
            - name: REGISTRY_HTTP_TRACING_ENABLED
              value: "false"
            - name: OTEL_TRACES_EXPORTER
              value: none
            - name: OTEL_SDK_DISABLED
              value: "true"
          image: registry:3
          name: registry
          volumeMounts:
            - mountPath: /var/lib/registry
              name: registry
      volumes:
        - name: registry
          persistentVolumeClaim:
            claimName: registry
