apps/registry/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: registry-route
  namespace: registry
spec:
  hostnames:
    - hub.${GATEWAY_DOMAIN}
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: cilium
      namespace: gateway-default
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: registry
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
